--- a/static/css/background.css
+++ b/static/css/background.css
@@ -6,5 +6,5 @@ html,body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
+    height: 1000px;
 }
